last fix for now box still overflowing

--- a/src/app/embla.css
+++ b/src/app/embla.css
@@ -2,7 +2,7 @@
     max-width: 100%; 
 
     margin: 1;
-    --slide-height: 30rem;
+    --slide-height: 22rem;
     --slide-spacing: 1rem;
     --slide-size: 100%;
     
